terraform/vpc.tf
// Create the VPCs
resource "aws_vpc" "main" {
  cidr_block           = "10.10.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
}

// Provision all public subnets
resource "aws_subnet" "public" {
  vpc_id            = aws_vpc.main.id
  availability_zone = "${local.primary_region}a"
  cidr_block        = "10.10.0.0/20"
  tags = {
    Name = "${local.primary_region}a (Public)"
  }
}

// Provision the Internet Gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "Internet Gateway"
  }
}

// Create a route table for the public subnets to use
resource "aws_route_table" "public-egress" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
  tags = {
    Name = "Public Subnets"
  }
}

// Associate the primary public subnets with the public route table
resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public-egress.id
}
